--- a/src/components/pageElement.module.scss
+++ b/src/components/pageElement.module.scss
@@ -5,8 +5,8 @@
   flex-flow: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  align-content: space-evenly;
 }
 
 .picContainer {
@@ -25,25 +25,28 @@
 }
 
 .contentInnerContainer {
+  flex: auto 1 1;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   flex-flow: column;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
+$elementMargin: 0.15em 0.25em 0.15em 0.25em;
+
 .singleText {
-  font-size: xxx-large;
-  padding: 0.25em 0.5em 0.25em 0.5em;
+  font-size: 250%;
+  margin: $elementMargin;
 }
 
 .singleButton {
-  margin: 0.25em 0.5em 0.25em 0.5em;
-  font-size: xx-large;
+  margin: $elementMargin;
+  font-size: 165%;
   background: linear-gradient(135deg, #005CAF 0%, #0B346E 100%);
   border: none;
   cursor: pointer;
   border-radius: 100px;
-  padding: 0.25em 1em 0.25em 1em;
+  padding: 0.25em 0.75em 0.25em 0.75em;
 }
